generate client bundles

--- a/src/server/public/index.html
+++ b/src/server/public/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title>Universe</title>
-<link href="css/3db4284ca76763be50622caf08606e29.css" rel="stylesheet"></head>
+<link href="css/styles.css" rel="stylesheet"></head>
 <body>
 
 
